# OpenFlipper

./: .qmake.cache  Build_Darwin_Bundle.sh  CMakeLists.txt  Doxyfile  OpenFlipper.cmake  OpenFlipper.pro  README.TXT  VERSION  updateDiff.patch
ACG/: ACGMakefile.proj  CMakeLists.txt  VERSION
ACG/ACG/ACG_VC2008/: ReadMe.txt
ACG/Algorithm/: DBSCANT.cc
ACG/Apps/: ACGMakefile
ACG/Config/: ACGDefines.hh
ACG/Docu/: mainpage.docu  misc.docu  namespaces.docu  nonFixedPipeline.docu  shaderGenerator.docu
ACG/GL/: ACGMakefile  AntiAliasing.cc  AntiAliasing.hh  ColorStack.cc  ColorStack.hh  ColorTranslator.cc  ColorTranslator.hh  DrawMesh.cc  DrawMesh.hh  DrawMeshT.cc  FBO.cc  FBO.hh  FilterKernels.cc  FilterKernels.hh  GLError.cc  GLError.hh  GLFormatInfo.cc  GLFormatInfo.hh  GLPrimitives.cc  GLPrimitives.hh  GLState.cc  GLState.hh  GLTrackball.cc  GluError.cc  GluError.hh  IRenderer.cc  IRenderer.hh  MSFilterWeights.cc  MSFilterWeights.hh  MeshCompiler.cc  MeshCompiler.hh  PBuffer.cc  PBuffer.hh  RenderObject.cc  RenderObject.hh  ScreenQuad.cc  ScreenQuad.hh  ShaderCache.cc  ShaderCache.hh  ShaderGenerator.cc  (+10 more)
ACG/Geometry/: Algorithms.cc  Algorithms.hh  AlgorithmsAngleT.cc  AlgorithmsAngleT.hh  GPUCacheOptimizer.cc  GPUCacheOptimizer.hh  Spherical.hh
ACG/Geometry/Types/: MeshEdgeSamplerT.cc  MeshEdgeSamplerT.hh  NormalConeT.cc  NormalConeT.hh  PlaneT.hh  PolyLineT.cc  PolyLineT.hh  QuadricT.hh
ACG/Geometry/bsp/: ACGMakefile  BSPImplT.cc  BSPImplT.hh  BSPTreeNode.hh  TriangleBSPCoreT.cc  TriangleBSPCoreT.hh  TriangleBSPT.hh  TriangleBSPTreeT.hh
ACG/Glut/: ACGMakefile  GlutExaminer.cc  GlutExaminer.hh  GlutViewer.cc  GlutViewer.hh
ACG/IO/: ACGMakefile
ACG/Math/: ACGMakefile  BezierCurveT.cc  BezierCurveT.hh  DualQuaternionT.cc  DualQuaternionT.hh  GLMatrixT.cc  GLMatrixT.hh  Matrix4x4T.cc  Matrix4x4T.hh  QuaternionT.hh  VectorT.hh
ACG/Mesh/: SmartTaggerT.cc  SmartTaggerT.hh
ACG/QtScenegraph/: QtManipulatorNode.cc  QtManipulatorNode.hh  QtTranslationManipulatorNode.cc  QtTranslationManipulatorNode.hh  QtWidgetNode.cc  QtWidgetNode.hh
ACG/QtWidgets/: QtApplication.cc  QtApplication.hh  QtBaseViewer.cc  QtBaseViewer.hh  QtBaseViewerDragDrop.cc  QtBaseViewerKeyHandling.cc  QtBaseViewerPicking.cc  QtBaseViewerSnapshot.cc  QtBaseViewerStereo.cc  QtBaseViewerSynchronization.cc  QtClippingDialog.cc  QtClippingDialog.hh  QtColorChooserButton.cc  QtColorChooserButton.hh  QtColorTranslator.cc  QtColorTranslator.hh  QtCoordFrameDialog.cc  QtCoordFrameDialog.hh  QtExaminerViewer.cc  QtExaminerViewer.hh  QtExaminerWidget.hh  QtFileDialog.cc  QtFileDialog.hh  QtFilePicker.cc  QtFlapBox.cc  QtFlapBox.hh  QtGLGraphicsScene.cc  QtGLGraphicsScene.hh  QtGLGraphicsView.cc  QtGLGraphicsView.hh  QtLasso.cc  QtLasso.hh  QtMaterialDialog.cc  QtMaterialDialog.hh  QtMaterialDialogUi.ui  QtSceneGraphWidget.cc  QtSceneGraphWidget.hh  QtShaderDialog.cc  QtShaderDialog.hh  QtTextureDialog.cc  (+8 more)
ACG/QwtWidgets/: QwtHistogramm.cc
ACG/Scenegraph/: ACGMakefile  BaseNode.cc  BaseNode.hh  BoundingBoxNode.cc  BoundingBoxNode.hh  CartesianClippingNode.cc  CartesianClippingNode.hh  ClippingNode.cc  ClippingNode.hh  CoordFrameNode.cc  CoordFrameNode.hh  CoordsysNode.cc  CoordsysNode.hh  DrawModes.cc  DrawModes.hh  EnvMapNode.cc  EnvMapNode.hh  GlutPrimitiveNode.cc  GlutPrimitiveNode.hh  GridNode.cc  GridNode.hh  LightNode.cc  LightNode.hh  LightSourceNode.cc  LightSourceNode.hh  LineNode.cc  LineNode.hh  ManipulatorNode.cc  ManipulatorNode.hh  Material2Node.cc  Material2Node.hh  MaterialNode.cc  MaterialNode.hh  MeshNode2T.cc  MeshNode2T.hh  MeshNodeOldT.hh  MeshNodeT.cc  MeshNodeT.hh  MeshNodeTOld.cc  OBJNode.cc  (+43 more)
ACG/ShaderUtils/: GLSLShader.cc  GLSLShader.hh  UniformPool.cc  UniformPool.hh  gldebug.h
ACG/Utils/: ColorCoder.cc  ColorCoder.hh  ColorGenerator.cc  ColorGenerator.hh  HaltonColors.cc  HaltonColors.hh  HeapT.hh  HuePartitioningColors.hh  Noncopyable.hh  NumLimitsT.hh  Progress.hh  SmartPointer.hh  StopWatch.hh  Tracing.cc  Tracing.hh  VSToolsT.hh
ACG/tests/: main.cc
ACG/tests/Algorithm/: DBSCAN_test.cc
ACG/tests/Math/: math_test.cc
ACG/tests/MeshCompiler/: MeshCompiler_test.cc  MeshCompiler_testData0.cc  MeshCompiler_testData1.cc
OpenFlipper/CoreApp/: CMakeLists.txt  CoreApp.pro  CoreApp.rc
OpenFlipper/CoreApp/translations/: CoreApp_de_DE.ts  OpenFlipper_de_DE.ts  openflipperPhrases.qph
OpenFlipper/PluginLib/: CMakeLists.txt  PluginLib.pro
Plugin-MeshCompare/: CMakeLists.txt  MeshComparePlugin.cc  MeshComparePlugin.hh  MeshCompareToolbar.ui  MeshCompareToolbarWidget.cc  MeshCompareToolbarWidget.hh  QwtFunctionPlot.cc  QwtFunctionPlot.hh
Plugin-PolyLine/: CMakeLists.txt  PolyLinePlugin.cc  PolyLinePlugin.hh  PolyLinePluginT.cc  PolyLinePlugin_BezierSpline.cc  PolyLinePlugin_Circle.cc  PolyLineToolbarWidget.cc  PolyLineToolbarWidget.hh  QtPlaneSelect.hh  polylineToolbar.ui  salt.hh
Plugin-TextureControl/: ACGMakefile  CMakeLists.txt  HistogramItem.cc  HistogramItem.hh  ImageStorage.cc  ImageStorage.hh  Plugin-TextureControl.pro  QwtFunctionPlot.cc  QwtFunctionPlot.hh  QwtFunctionPlotBase.ui  TextureControl.cc  TextureControl.hh  TextureControl1DTextureHandlingOVMT.cc  TextureControl1DTextureHandlingT.cc  TextureControl2DTextureHandlingOVMT.cc  TextureControl2DTextureHandlingT.cc  TextureControlHistogramsT.cc  TextureData.cc  TextureData.hh  TextureMath.cc  TextureMath.hh  TextureParameters.cc  Ui_TextureProperties.ui  textureProperties.cc  textureProperties.hh  textureProperties.ui
branches/Free/: Build_Darwin_Bundle.sh  CMakeLists.txt  OpenFlipper.pro  README.TXT  VERSION  changelog  valgrind.sh
branches/Free/ACG/: ACG.pro  ACGMakefile  (+1 more)
tests/: CMakeLists.txt  cppcheck-suppressions.txt  fileMeshTest.ofs  fileSkeletonTest.ofs  run_cppcheck.sh  run_file_test.cmake  run_script_test.cmake  run_test_compare.cmake  run_test_md5.cmake  run_tests.bat  testGenerators.cmake
tests/MinimalExecutionTest/: CMakeLists.txt
tests/comparatorTool/: CMakeLists.txt  comparator.cc
tests/compareTool/: CMakeLists.txt  compareTool.cc
tests/testExample/: CMakeLists.txt  test_example.cc
(+3654 files in other folders)
